# marine_minds

./: package-lock.json
backend/: .env  chroma_client.py  config.py  flask_app.py  init_db.py  models.py  netcdf_processor.py  pyproject.toml  socket_manager.py  test.py
backend/chroma_db_storage/: chroma.sqlite3
backend/mcpServers/: chromaserver.py  supabaseserver.py
backend/services/: crewai_service.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/public/models/: argo.glb  argo.gltf
frontend/src/: App.tsx  index.css  main.tsx  store.ts
frontend/src/components/home/: Analysis.tsx  ChatInterface.tsx  ChatMap.tsx  Footer.tsx  GlobeVisualization.tsx  Graphs.tsx  HeroSection.tsx  HowItWorks.tsx  Navbar.tsx  TechStackShowcase.tsx  TrySection.tsx
frontend/src/components/map/: ArgoFloatsMap.tsx
frontend/src/components/ui/: TypewriterThoughts.tsx  shooting-stars.tsx  stars-background.tsx
frontend/src/components/ui/shadcn-io/dark-veil-background/: index.tsx
frontend/src/pages/: Admin.tsx  Chat.tsx  Home.tsx  Map.tsx
frontend/src/route/: index.tsx
frontend/src/services/: socketService.ts
frontend/src/slices/: chatSlice.ts
